<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">



    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appratingsoft.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.appratingsoft.ui.personas.PersonasFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_personas" />

    <fragment
        android:id="@+id/nav_gallery2"
        android:name="com.example.appratingsoft.ui.personas.PersonasFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_personas" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.appratingsoft.ui.TipoAsignatura.TipoAsignaturaFragment"
        android:label="Tipo Asignatura"
        tools:layout="@layout/fragment_tipoasignaturas" />

    <fragment
        android:id="@+id/notas"
        android:name="com.example.appratingsoft.ui.notas.NotasFragment"
        android:label="Notas"
        tools:layout="@layout/fragment_notas" />
    <fragment
        android:id="@+id/nav_slideshow2"
        android:name="com.example.appratingsoft.ui.cursos.CursosFragment"
        android:label="Cursos"
        tools:layout="@layout/fragment_cursos" />


    <fragment
        android:id="@+id/user"
        android:name="com.example.appratingsoft.ui.perfil.PerfilFragment"
        android:label="perfil"
        tools:layout="@layout/activity_edit_perfil" />

    <fragment
        android:id="@+id/config"
        android:name="com.example.appratingsoft.ConfiguracionFragment"
        android:label="@string/salir"
        tools:layout="@layout/activity_edit_perfil" />
</navigation>