<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:fontFamily="@font/titulos"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/user"
            android:icon="@drawable/person"
            android:fontFamily="@font/titulos"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/asignatur"
            android:fontFamily="@font/titulos"
            android:title="@string/menu_slideshow"/>
        <item
            android:id="@+id/nav_slideshow2"
            android:fontFamily="@font/titulos"
            android:icon="@drawable/curso"
            android:title="Cursos" />
        <item
            android:id="@+id/notas"
            android:fontFamily="@font/titulos"
            android:icon="@drawable/notas"
            android:title="Notas" />
        <item
            android:id="@+id/nav_gallery2"
            android:fontFamily="@font/titulos"
            android:icon="@drawable/users"
            android:title="Usuarios" />
        <item
            android:id="@+id/config"
            android:fontFamily="@font/titulos"
            android:icon="@drawable/setting"
            android:title="Salir"/>

    </group>
</menu>